--- a/app/src/main/res/layout/fragment_solo_setup.xml
+++ b/app/src/main/res/layout/fragment_solo_setup.xml
@@ -19,12 +19,16 @@
             android:layout_height="wrap_content"
             tools:context=".view.SoloSetupFragment">
 
+            <!--<Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>-->
+
             <TextView
                 android:id="@+id/profile_image_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="80dp"
                 android:text="Profile Image"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +38,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="30dp"
-                android:scaleType="centerInside"
+                android:scaleType="centerCrop"
                 app:shapeAppearanceOverlay="@style/circleImageView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
