--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="primary_pink">#EC2761</color>
     <color name="primaryVariant_pink">#951B48</color>
     <color name="secondary_pink">#efafc0</color>
+    <color name="dark_edit_text_grey">#2f2d2d</color>
+    <color name="light_edit_text_grey">#d3d3d3</color>
 </resources>
