--- a/app/src/main/res/layout/artist_card.xml
+++ b/app/src/main/res/layout/artist_card.xml
@@ -13,9 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp"
         app:cardCornerRadius="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,7 +29,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="centerCrop"
-                android:imageURL="@{artistModel.profileImg.toString()}"
+                android:imageURL="@{artistModel.profileImg}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
