--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -75,8 +75,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/login_txt"
-                    app:layout_constraintBottom_toTopOf="@id/password_field"
-                    >
+                    app:layout_constraintBottom_toTopOf="@id/password_field">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
