--- a/app/src/main/res/layout/artist_card.xml
+++ b/app/src/main/res/layout/artist_card.xml
@@ -12,9 +12,7 @@
         android:id="@+id/artist_card"
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="20dp"
+        android:layout_margin="20dp"
         app:cardCornerRadius="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
