--- a/app/src/main/res/layout/fragment_solo_profile.xml
+++ b/app/src/main/res/layout/fragment_solo_profile.xml
@@ -9,6 +9,10 @@
         <variable
             name="artistModel"
             type="com.example.rockaroundapp.model.Artist" />
+
+        <variable
+            name="groupModel"
+            type="com.example.rockaroundapp.model.GroupArtist" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -59,7 +63,19 @@
                 app:layout_constraintEnd_toEndOf="@id/profile_image"
                 app:layout_constraintStart_toStartOf="@id/profile_image"
                 app:layout_constraintTop_toBottomOf="@id/artist_name"
-                android:text="@{artistModel.userType + `Artist`}">
+                android:text="@{artistModel.userType + ` Artist`}">
+            </TextView>
+
+            <TextView
+                android:id="@+id/artist_members"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                android:text="@{groupModel.noOfMembers + ` Members`}"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="@id/profile_image"
+                app:layout_constraintStart_toStartOf="@id/profile_image"
+                app:layout_constraintTop_toBottomOf="@id/artist_type">
             </TextView>
 
             <TextView
@@ -70,7 +86,7 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="@id/profile_image"
                 app:layout_constraintStart_toStartOf="@id/profile_image"
-                app:layout_constraintTop_toBottomOf="@id/artist_type">
+                app:layout_constraintTop_toBottomOf="@id/artist_members">
             </TextView>
 
             <View
