--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -14,8 +14,8 @@
         android:icon="@drawable/ic_baseline_location_on_24"/>
 
     <item
-        android:id="@+id/profile"
-        android:title="Profile"
+        android:id="@+id/account"
+        android:title="Account"
         android:orderInCategory="2"
         android:icon="@drawable/ic_baseline_account_circle_24"/>
 </menu>
