- Added Venue and Artist Discover; _ Added change on discover page on login.

--- a/app/src/main/res/layout/fragment_artist_explore.xml
+++ b/app/src/main/res/layout/fragment_artist_explore.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.ArtistExploreFragment">
+    tools:context=".view.DiscoverFragment">
 
     <data>
         <variable
             name="artistExploreViewModel"
-            type="com.example.rockaroundapp.viewmodel.ArtistExploreViewModel" />
+            type="com.example.rockaroundapp.viewmodel.DiscoverViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
